# langchain_rag_demo

./: .env.example  .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml
docs/: code-analysis.md  rag-deep-dive.md  rag-practice.md
src/agent/: __init__.py  llm.py  loader.py  rag_chain.py  retriever.py  splitter.py  vectorstore.py
